--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:FLypmkO0z9TzMi4E6DT4YAnKR4UtyDp7cwmSrQP0B5E=
+APP_KEY=base64:6IUiOtspMOYjNzfu1TAt+THWzCijlOsiugnYbzE9s+4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sistema
-DB_USERNAME=laura
-DB_PASSWORD=1234
+DB_DATABASE=sistemas
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
